# linkedin-api

./: .env-sample  Dockerfile  LICENSE  Pipfile  README.md  liara.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: liara.yaml
alembic/: env.py
alembic/versions/: 375acce98bf0_initial_migration.py
api/: main.py  utils.py
api/Linkedin/: __init__.py  errors.py
api/config/: __init__.py  settings.py
api/db/: crud.py  database.py  models.py
src/: main.py  settings.py  utils.py
src/api/: api_router.py
src/api/endpoints/: first_page.py  linkedin_api.py
src/config/: __init__.py
src/db/: crud.py  database.py  models.py
src/linkedin/: crawler.py  schemas.py
src/static/css/: custom.css  styles.css
src/templates/: base.html  home.html
src/utils/: logger.py  utils.py
templates/: base.html  home.html  post-details.html
