[tool.poetry]
name = "linkedin-api"
version = "0.1.0"
description = ""
authors = ["Amir Aref <amiraref808@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
jinja2 = "^3.1.3"
python-multipart = "^0.0.7"
bs4 = "^0.0.1"
requests = "^2.31.0"
humanize = "^4.8.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
